# mini-cad

./: .gitignore  CMakeLists.txt  main.c  readme.md
utils/: acllib.c  acllib.h  list.c  list.h  point.h
